[package]
name = "refinement"
version = "0.4.0"
authors = ["Brady Dean <2bdkid@gmail.com>", "Joey Ezechiels <joey.ezechiels@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/2bdkid/refinement"
description = "Convenient creation of type-safe refinement types."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
